--- a/_includes/social.liquid
+++ b/_includes/social.liquid
@@ -121,6 +121,12 @@
 {% if site.rss_icon %}
   <a href="{{ site.baseurl }}/feed.xml" title="RSS Feed"><i class="fa-solid fa-square-rss"></i></a>
 {% endif %}
+{% if site.linkedin_icon %}
+  <a href="{{ site.linkedin_url }}" title="RSS Feed"><i class="fa-solid fa-square-rss"></i></a>
+{% endif %}
+{% if site.twitter_icon %}
+  <a href="{{ site.twitter_url }}" title="RSS Feed"><i class="fa-solid fa-square-rss"></i></a>
+{% endif %}
 {% if site.wechat_qr %}
   <a id="WeChatBtn" title="WeChat"><i class="fa-brands fa-weixin"></i></a>
   <div id="WeChatMod" class="wechat-modal">
