--- a/_includes/social.liquid
+++ b/_includes/social.liquid
@@ -122,10 +122,10 @@
   <a href="{{ site.baseurl }}/feed.xml" title="RSS Feed"><i class="fa-solid fa-square-rss"></i></a>
 {% endif %}
 {% if site.linkedin_icon %}
-  <a href="{{ site.linkedin_url }}" title="RSS Feed"><i class="fa-solid fa-square-rss"></i></a>
+  <a href="{{ site.linkedin_url }}" title="linkedin"><i class="fa-solid fa-square-rss"></i></a>
 {% endif %}
 {% if site.twitter_icon %}
-  <a href="{{ site.twitter_url }}" title="RSS Feed"><i class="fa-solid fa-square-rss"></i></a>
+  <a href="{{ site.twitter_url }}" title="twitter"><i class="fa-solid fa-square-rss"></i></a>
 {% endif %}
 {% if site.wechat_qr %}
   <a id="WeChatBtn" title="WeChat"><i class="fa-brands fa-weixin"></i></a>
