--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -166,6 +166,9 @@
     {% if entry.location %}
       {% capture entrytype %}{{ entrytype }}{{ ", " }}{{ entry.location }}{% endcapture %}
     {% endif -%}
+    {% if entry.publisher %}
+      {% capture entrytype %}{{ entry.publisher }}{% endcapture %}
+    {% endif -%}
     {% if entry.additional_info %}
       {% capture entrytype %}{{ entrytype }}{{ entry.additional_info | markdownify | remove: '<p>' | remove: '</p>' }}{% endcapture %}
     {% endif %}
