--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -143,6 +143,11 @@
         >
         </i>
       {% endif %}
+      {% if entry.author %}
+        <div class="ml-1">
+        {{entry.author}}
+        </div>
+      {% endif %}
     </div>
 
     <!-- Journal/Book title and date -->
