--- a/_includes/video.liquid
+++ b/_includes/video.liquid
@@ -53,7 +53,7 @@
     />
 
   {% else %}
-    <iframe
+    <embed
       src="{{ include.path }}"
       {% if include.class %}
         class="{{ include.class }}"
