--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -6,7 +6,7 @@ layout: default
     <h1 class="post-title">
       {% if site.title == 'blank' %} 
         {{ site.middle_name }}{{ site.last_name }} 
-        <span class="font-weight-bold">{{ site.first_name }}</span>
+        <span class="font-weight-bold">{{ site.first_name }}</span>（陈源镐）
       {% else %}
         {{ site.title }}
       {% endif %}
