--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -11,7 +11,7 @@ layout: default
         {{ site.title }}
       {% endif %}
     </h1>
-    <p class="desc">{{ page.subtitle }}</p>
+    <p class="desc" style="font-style: italic;color: #777;font-weight: 700;">{{ page.subtitle }}</p>
   </header>
 
   <article>
