--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -161,7 +161,7 @@
       {% capture entrymonth %}{{ " " }}{{ entry.month | capitalize }}{% endcapture %}
     {% endif %}
     {% if entry.publisher %}
-      {% capture entrytype %}{{ entry.publisher }}{% endcapture %}
+      {% capture entrytype %}{{ entry.publisher }}11{% endcapture %}
     {% endif -%}
     {% if entry.location %}
       {% capture entrytype %}{{ entrytype }}{{ entry.location }}{% endcapture %}
