--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -161,7 +161,7 @@
       {% capture entrymonth %}{{ " " }}{{ entry.month | capitalize }}{% endcapture %}
     {% endif %}
     {% if entry.publisher %}
-      {% capture entrytype %}{{ entry.publisher }}11{% endcapture %}
+      {% capture entrytype %}{{ entry.publisher }}{% endcapture %}
     {% endif -%}
     {% if entry.location %}
       {% capture entrytype %}{{ entrytype }}{{ entry.location }}{% endcapture %}
@@ -174,7 +174,7 @@
       {% include hook/bib.liquid %}
     {% endif %}
     {% assign entrytype_text = entrytype | strip_html | strip %}
-    {% capture periodical %}{{ entrytype }}{% if entrytype_text != "" and entryyear != "" %}, {% endif %}{{ entrymonth }}{{ entryyear }}{% endcapture %}
+    {% capture periodical %}{{ entrytype }}{% if entrytype_text != "" and entryyear != "" %} {% endif %}{{ entrymonth }}{{ entryyear }}{% endcapture %}
     <div class="periodical">
       {{ periodical | strip }}
     </div>
