--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -7,8 +7,7 @@
           {% if site.title == 'blank' %}
             {% if site.middle_name %}
               {{- site.middle_name -}}
-            {% endif %}
-            {% if site.last_name %}
+            {% endif %}{% if site.last_name %}
               {{- site.last_name -}}
             {% endif %}
             {% if site.first_name %}
